# mini-ADAS

./: .gitignore  README.md  tool.cmake
applications/: .gitignore  build.sh  clean.sh
applications/common/nc_app_modules/: nc_types.h
applications/common/nc_app_modules/buffer_ctrl/: nc_ts_circular_buffers.c  nc_ts_flipflop_buffers.c  nc_ts_fsync_circular_buffers.c  nc_ts_fsync_circular_buffers.h  nc_ts_fsync_flipflop_buffers.c  nc_ts_fsync_flipflop_buffers.h
applications/common/nc_app_modules/cnn/: nc_cnn_network_includes.h
applications/common/nc_app_modules/config/: nc_cnn_config_parser.c
applications/common/nc_app_modules/dmabuf_ctrl/: nc_dmabuf_ctrl.h  nc_dmabuf_ctrl_helper.c  nc_dmabuf_ctrl_helper.h
applications/common/nc_app_modules/dsr/: nc_dsr_api.c  nc_dsr_set.h  nc_dsr_type.h
applications/common/nc_app_modules/gpio_ctrl/: nc_gpio.c  nc_gpio.h
applications/common/nc_app_modules/gui/: nc_logo.c  nc_logo.h
applications/common/nc_app_modules/neon/: nc_neon.c
applications/common/nc_app_modules/opengl/: nc_opengl_bitmap_font.c  nc_opengl_bitmap_font.h  nc_opengl_init.h  nc_opengl_interface.c  nc_opengl_interface.h  nc_opengl_ttf_font.c  nc_opengl_ttf_font.h
applications/common/nc_app_modules/streamer/: nc_streamer.c  nc_streamer.h
applications/common/nc_app_modules/v4l2/: v4l2_interface.c  v4l2_interface.h
applications/common/nc_video_codec/: build_lib_nc_vcodec.sh  config.h  makencvcodec.mak  nc_video_codec.h
applications/dsr_app/: Makefile  dsr_app.c
applications/misc/: isp_jig_vision0  isp_jig_vision1  nc_module.ini  peleedet_10class_640x384_apache6sr250_aiw4939.ini  peleedet_3class_640x384_apache6sr250_aiw4939.ini  run_app_npu.sh  run_app_tflite_det.sh  run_app_vcodec.sh  run_app_wayland_npu.sh  run_v4l2loopback.sh  start-app.sh  trichimera_640x384_a6sr_aiw4939.ini  ufld_a6sr250_aiw4939.ini  yolov5s_coco_640x384_apache6sr250_aiw4939.ini  yolov8n_coco_640x384_apache6sr250_aiw4939.ini  yolov8n_ncdl_640x384_apache6sr250_aiw4939.ini  yolov8s_coco_640x384_apache6sr250_aiw4939.ini
applications/misc/image_npu/: png_list_640x384.txt
applications/misc/lib/: libfreetype.so.6  libopencv_flann.so.3.4  libopencv_imgcodecs.so.3.4.17  libopencv_videoio.so.3.4  libstdc++.so.6  libswresample.so.3  libswscale.so.5.9.100  libtiff.so.5
applications/misc/texture/: holstein.tga
applications/npu_app/: Makefile  npu_app.c
applications/sample/: cal  cal.c  hello
applications/tflite_det_app/: CMakeLists.txt  tflite_det_app.cc
applications/tflite_det_app/app_build/: CMakeCache.txt  Makefile  app_tflite_det  cmake_install.cmake
applications/user_app/: Makefile  app_user  user_app.c
applications/user_npu/: Makefile  npu_user  npu_user_h  user_npu_h.c  user_npu_m.c  user_npu_y.c
applications/user_npu_app/: Makefile  app_user_npu  user_npu_app.c
applications/wayland_cam_app/: Makefile  wayland_cam_app.c
applications/wayland_egl_app/: Makefile  wayland_egl_app.c
applications/wayland_egl_app/matrix/: matrix.h
applications/wayland_npu_app/: Makefile  adas_logic.c  adas_logic.h  parking_npu_app.c  test1  wayland_npu_app.c
applications/x86_example/: cal  hello.c  helloA
common/: OSS-NOTICE.README
common/aiware/common/c/: env.h
common/aiware/emulator/: aiware-emulator-lib_export.h
common/nc_app_modules/buffer_ctrl/: nc_ts_circular_buffers.h  nc_ts_flipflop_buffers.h
common/nc_app_modules/config/: nc_app_config_parser.c  nc_app_config_parser.h  nc_cnn_config_parser.h
common/nc_app_modules/dsr/: nc_dsr_api.h  nc_dsr_helper.c  nc_dsr_helper.h  nc_dsr_set.c
common/nc_app_modules/neon/: nc_neon.h
common/nc_app_modules/opengl/: nc_opengl_init.c  nc_opengl_shader.c  nc_opengl_shader.h
common/nc_app_modules/utils/: nc_utils.c  nc_utils.h
common/nc_app_modules/wayland_egl/: wayland_egl.c
common/nc_app_modules/wrapper/: nc_opencv_wrapper.h
common/nc_video_codec/vdi/: vdi.c  vdi.h
common/nc_video_codec/vpuapi/: vpuapi.h  vpuapifunc.h  vpuconfig.h
dsr_app/: nc_dsr_app.c
misc/: apache6fb.ko  ffmpeg  nc_module_load.sh  peleeseg_640x384_apache6sr250_aiw4939.ini  pplite_2class_640x384_apache6sr250_aiw4939.ini  run_app_dsr.sh  run_app_wayland_cam.sh  run_app_wayland_egl.sh
misc/lib/: libSDL2-2.0.so.0.18.2  libavfilter.so.7  libjasper.so.4  libopencv_core.so.3.4.17  libopencv_imgproc.so.3.4  libopencv_ml.so.3.4.17
sample/: hello.c
tflite_det_app/: tflite_det_app.h
tflite_det_app/app_build/: cmake_install.cmake
user_app/: app_user
user_npu/: npu_user  user_npu.c
vcodec_app/: Makefile  vcodec_app.c
wayland_cam_app/: Makefile  wayland_cam_app.c
wayland_egl_app/matrix/: matrix.c
x86_example/: calA  hello
(+141 files in other folders)
